--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/qrify-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QRify | Generate & Scan</title>
+    <meta name="description" content="QRify is a web application that allows users to generate and scan QR codes easily. Create custom QR codes for URLs, text, and more, and scan existing QR codes with ease. Perfect for personal and professional use.">
+    <meta name="keywords" content="QR code, QR code generator, QR code scanner, create QR code, scan QR code, custom QR code, QRify">
+    <meta name="author" content="keenyateesh">
+    <meta property="og:title" content="QRify | Generate & Scan">
+    <meta property="og:description" content="QRify is a web application that allows users to generate and scan QR codes easily. Create custom QR codes for URLs, text, and more, and scan existing QR codes with ease. Perfect for personal and professional use.">
+    <meta property="og:image" content="/icon-512x512-.png">
+    <meta property="og:url" content="https://qrify.keenyateesh.me">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="QRify | Generate & Scan">
+    <meta name="twitter:description" content="QRify is a web application that allows users to generate and scan QR codes easily. Create custom QR codes for URLs, text, and more, and scan existing QR codes with ease. Perfect for personal and professional use.">
+    <meta name="twitter:image" content="/qrify-twitter-image.png">
   </head>
   <body>
     <div id="app"></div>
