--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/qrify-favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>QRify | Generate & Scan</title>
     <meta name="description" content="QRify is a web application that allows users to generate and scan QR codes easily. Create custom QR codes for URLs, text, and more, and scan existing QR codes with ease. Perfect for personal and professional use.">
     <meta name="keywords" content="QR code, QR code generator, QR code scanner, create QR code, scan QR code, custom QR code, QRify">
